Fix missing vertical gap value

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ a:hover {
   flex-wrap: wrap;
   justify-content: space-between;
   list-style: none;
-  margin: 0 0 calc(-1 * var(--flex-list-vertical-gap)); /* 1 */
+  margin: 0 0 calc(-1 * var(--flex-list-vertical-gap, 0)); /* 1 */
   padding: 0;
 }
 
@@ -105,7 +105,7 @@ a:hover {
   --subtitle-margin-bottom: 0;
   background: var(--flex-list-item-background, inherit);
   flex-basis: 35rem; /* 1 */
-  margin: 0 auto var(--flex-list-vertical-gap); /* 3, 4 */
+  margin: 0 auto var(--flex-list-vertical-gap, 0); /* 3, 4 */
   text-align: center;
 }
 
@@ -234,6 +234,7 @@ a:hover {
 /** SERVICES */
 
 .services {
+  --flex-list-vertical-gap: 0;
   --icon-size: 12.5rem;
   --icon-font-size: 6.4rem;
   --icon-color: var(--color-primary);
@@ -457,6 +458,7 @@ a:hover {
 /** TEAM */
 
 .team {
+  --flex-list-vertical-gap: 5rem;
   background: var(--color-lightgray);
   padding: 16rem 0;
 }
